Final Build combine as Spring with Angular